--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "android-messages-desktop",
-  "description": "Messages for web, as a desktop app",
-  "version": "5.6.0",
+  "name": "messagesl",
+  "description": "Messages for web, as a desktop app, but upgraded",
+  "version": "1.0.0",
   "author": {
-    "name": "Kyle Rosenberg",
-    "email": "kyle@ekrosenberg.com"
+    "name": "Derek Hu",
+    "email": "derekhu_@outlook.com"
   },
   "license": "MIT",
-  "copyright": "Copyright 2020 Kyle Rosenberg",
-  "homepage": "https://github.com/OrangeDrangon/android-messages-desktop",
+  "copyright": "Copyright 2025 Derek Hu",
+  "homepage": "https://messagesl.github.io/",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/OrangeDrangon/android-messages-desktop.git"
+    "url": "git+https://github.com/AntiphonL/MessagesL.git"
   },
   "bugs": {
-    "url": "https://github.com/OrangeDrangon/android-messages-desktop/issues"
+    "url": "https://github.com/AntiphonL/MessagesL/issues"
   },
   "main": "app/background.js",
   "scripts": {
